# sepio-linkml

./: .cruft.json  .env.public  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  schema_test.yaml  sitemap.xml  vars.public.mk
Activity/: index.html
Agent/: index.html
Boolean/: index.html
Characteristic/: index.html
Coding/: index.html
Contribution/: index.html
Curie/: index.html
DataItem/: index.html
DataSet/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Document/: index.html
Double/: index.html
Entity/: index.html
EvidenceLine/: index.html
Expression/: index.html
Extension/: index.html
Float/: index.html
InformationEntity/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Method/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Proposition/: index.html
Qualifier/: index.html
RecordMetadata/: index.html
SEPIO-Model/: index.html
SEPIO_Model/: index.html
Sparqlpath/: index.html
Statement/: index.html
String/: index.html
StudyGroup/: index.html
StudyResult/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
Utility/: index.html
about/: index.html
activityType/: index.html
alternativeLabels/: index.html
characteristics/: index.html
code/: index.html
componentDataItem/: index.html
componentResult/: index.html
confidenceInterval/: index.html
contributionMadeTo/: index.html
(+270 files in other folders)
